<resources>
    <string name="app_name">Delicious Food</string>
    //start splash screen
    <string name="delicious_food">Delicious Food</string>
    <string name="loading">Loading...</string>
    <string name="delicious_food_company">Delicious Food Company</string>
    //end splash screen
    //start home activity
    <string name="searchview_hint">Search food, drink or cake...</string>
    <string name="searchview_title">Search</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    //end home activity
    //start account fragment
    <string name="view_profile_fragment_account">View Profile</string>
    <string name="logout_fragment_account">Log Out</string>
    <string name="login_fragment_account">Login</string>
    <string name="settings_fragment_account">Settings</string>
    <string name="help_fragment_account">Help</string>
    <string name="about_fragment_account">About</string>
    <string name="payment_fragment_account">Payment</string>
    <string name="order_history_fragment_account">Order History</string>
    <string name="invite_friends_fragment_account">Invite Friends</string>
    <string name="feedback_fragment_account">Feedback</string>
    <string name="title_fragment_account">Account</string>
    //end account fragment
    //start payment activity
    <string name="title_payment_activity">Payment</string>
    <string name="airpay_payment_activity">AirPay</string>
    <string name="now_credits_payment_activity">Now Credits</string>
    <string name="credit_visa_master_jcb_payment_activity">Credit VISA/MASTER/JCB</string>
    <string name="cash_payment_activity">Cash</string>
    <string name="internet_banking_payment_activity">Internet Banking</string>
    //end payment activity
    //start fragment home
    <string name="title_fragment_fastfood">Fast Food</string>
    <string name="title_fragment_drink">Drink</string>
    <string name="title_fragment_cake">Cake</string>
    //end fragment home
    //start activity login
    <string name="edit_text_username_login">Enter the Username...</string>
    <string name="edit_text_password_login">Enter the Password...</string>
    <string name="button_login">Login</string>
    <string name="button_login_with_facebook">Login with Facebook</string>
    <string name="button_login_with_google">Login with Google+</string>
    <string name="text_register">Register</string>
    <string name="have_not_an_account">Do you have not an account?</string>
    //end activity login
    //start activity register
    <string name="button_register">Register</string>
    <string name="edit_text_username_register">Enter the Username...</string>
    <string name="edit_text_password_register">Enter the Password...</string>
    <string name="edit_text_re_enter_password_register">Re-Enter the Password...</string>
    <string name="edit_text_name_register">Enter the your name...</string>
    <string name="edit_text_email_register">Enter the email...</string>
    <string name="have_an_account">Do you have an account?</string>
    <string name="text_login">Login</string>
    <string name="text_request">Please fill information in the form below to proceed with the registration account</string>
    //end activity register
    //start fragmnet fastfood
    <string name="price_fastfood_fragment">Price:</string>
    //end fragment fastfood
    //start activity detail
    <string name="title_detail_activity">Detail</string>
    //end activity detail
    //start activity profile
    <string name="title_profile_activity">Profile</string>
    <string name="name_in_profile_activity">Name:</string>
    <string name="address_in_profile_activity">Address:</string>
    <string name="phone_number_in_profile_activity">Phone:</string>
    <string name="email_in_profile_activity">Email:</string>
    <string name="change_in_profile_activity">Change</string>
    <string name="save_in_profile_activity">Save</string>
    //end activity profile
    //error start
    <string name="error_email">Sai dinh dang email</string>
    <string name="error_isemty">Vui long nhap day du thong tin ben duoi</string>
    <string name="error_username_isexist">Ten dang nhap da ton tai</string>
    <string name="error_password_so_short">Mat khau qua ngan</string>
    <string name="error_re_enter_password">Nhap lai password sai</string>
    //error end
    //detail activity start
    <string name="hint_comment">Comment...</string>
    <string name="must_login">You must Login!</string>
    <string name="amount_not_zero">Amount can not zero</string>
    //detail activity end
    //cart fragment start
    <string name="amount">So luong:</string>
    <string name="tongtien">Tong tien:</string>
    <string name="title_fragment_cart">Cart</string>
    //cart fragment end
    //notification fragment start
    <string name="title_fragment_notification">Notification</string>
    //notification fragment end
    //cart detail activity start
    <string name="save_to_cart">Save</string>
    <string name="delivery">Delivery</string>
    <string name="book">Book</string>
    <string name="title_alert_dialog_delete">Delete</string>
    <string name="message_alert_dialog_delete">You want to delete?</string>
    <string name="ok_alert_dialog_delete">OK</string>
    <string name="cancel_alert_dialog_delete">Cancel</string>
    <string name="delete_successful">Data delete successfully</string>
    <string name="delete_fail">Unable delete data to database</string>
    //cart detail activity end
    //dialog book start
    <string name="title_dialog_book">Dat hang</string>
    <string name="day_dialog_book">Day:</string>
    <string name="month_dialog_book">Month:</string>
    <string name="hour_dialog_book">Hour:</string>
    <string name="minute_dialog_book">Minute:</string>
    <string name="content_dialog_book">ban vui long thanh toan trc 50% de tien hanh dat ban</string>
    <string name="button_book_dialog_book">Dat ban</string>
    <string name="button_relative_dialog_book">Lien ket tai khoan ngan hang</string>
    //dialog book end
</resources>
