<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/delicious_food"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:text="@string/text_request"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtUserName"
            android:layout_marginTop="5dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:hint="@string/edit_text_username_register"
            android:textColorHint="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtNameRegister"
            android:textCursorDrawable="@null"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:hint="@string/edit_text_name_register"
            android:textColorHint="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtEmailRegister"
            android:textCursorDrawable="@null"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:hint="@string/edit_text_email_register"
            android:textColorHint="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtPassword"
            android:textCursorDrawable="@null"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:hint="@string/edit_text_password_register"
            android:inputType="textPassword"
            android:textColorHint="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtReEnterPassword"
            android:textCursorDrawable="@null"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:hint="@string/edit_text_re_enter_password_register"
            android:textColorHint="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnRegister"
            android:background="@drawable/custom_background_button_login"
            android:text="@string/button_register"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/have_an_account"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtLogin"
            android:text="@string/text_login"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>