<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorGray"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar_payment_activity"
        layout="@layout/toolbar" />
    <TextView
        android:id="@+id/txtPayment"
        android:textSize="18sp"
        android:text="@string/airpay_payment_activity"
        android:drawableRight="@drawable/ic_action_arrow_right_black"
        android:drawablePadding="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtOrderHistory"
        android:textSize="18sp"
        android:text="@string/now_credits_payment_activity"
        android:drawableRight="@drawable/ic_action_arrow_right_black"
        android:drawablePadding="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtInviteFriends"
        android:textSize="18sp"
        android:text="@string/credit_visa_master_jcb_payment_activity"
        android:drawableRight="@drawable/ic_action_arrow_right_black"
        android:drawablePadding="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtFeedback"
        android:textSize="18sp"
        android:text="@string/cash_payment_activity"
        android:drawableRight="@drawable/ic_action_arrow_right_black"
        android:drawablePadding="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtSettings"
        android:textSize="18sp"
        android:text="@string/internet_banking_payment_activity"
        android:drawableRight="@drawable/ic_action_arrow_right_black"
        android:drawablePadding="5dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>