<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorGray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home_fragment"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/title_fragment_account"
            android:textStyle="bold"
            android:padding="5dp"
            android:paddingStart="40dp"
            android:textColor="@color/colorWhite"
            android:layout_width="330dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/imageButtonSearch"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_search_white"
            android:padding="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/frameViewProfile"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/albedo"
                android:layout_margin="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtName"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtViewProfile"
                android:textAlignment="textEnd"
                android:text="@string/view_profile_fragment_account"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_action_arrow_right_white"
                android:drawablePadding="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frameLogin"
            android:gravity="right|center"
            android:orientation="horizontal"
            android:background="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <TextView
                android:id="@+id/txtLogin"
                android:textAlignment="textEnd"
                android:text="@string/login_fragment_account"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtPayment"
            android:textSize="18sp"
            android:text="@string/payment_fragment_account"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtInviteFriends"
            android:textSize="18sp"
            android:text="@string/invite_friends_fragment_account"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtFeedback"
            android:textSize="18sp"
            android:text="@string/feedback_fragment_account"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtSettings"
            android:textSize="18sp"
            android:text="@string/settings_fragment_account"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtHelp"
            android:textSize="18sp"
            android:text="@string/help_fragment_account"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtAbout"
            android:textSize="18sp"
            android:layout_marginTop="1dp"
            android:text="@string/about_fragment_account"
            android:drawableRight="@drawable/ic_action_arrow_right_black"
            android:drawablePadding="5dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtLogOut"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:text="@string/logout_fragment_account"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtVersionFragmentAccount"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>