<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/tanxuan"
    android:layout_height="match_parent"
    tools:context=".View.SplashScreenActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/colorTransparentRed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/delicious_food"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtVersionSplashScreen"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorWhite"
                    android:layout_width="16dp"
                    android:layout_height="16dp" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:text="@string/loading"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:text="@string/delicious_food_company"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:fontFamily="cursive"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>